--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 .App {
   text-align: center;
+  
+}
+.cards {
+  display: flex;
+  justify-content: center;
+  width: 100%; /* Make container full width */
 }
 
 .App-logo {
